Fixed list-page nav z-index and bump version 0.1.52

--- a/src/scss/backend/components/list_page.scss
+++ b/src/scss/backend/components/list_page.scss
@@ -11,7 +11,7 @@
 .list-page-container .navigation-main {
   top: 0;
   visibility: visible;
-  z-index: 1;
+  z-index: 2;
 }
 
 @media (max-width: 767.98px) {
